Add unit 2 topic

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Docuentos incompletos o soluciones de talleres
+rubrica-taller-1.xlsx
+2_taller1.ipynb
+2_taller1_solved.ipynb
+2_taller2.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
