--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ rubrica-taller-2.xlsx
 2_taller1_solved.ipynb
 2_taller2.ipynb
 2_taller2_solved.ipynb
-Unidad 3/
+1_ML_fundamentals.ipynb
+venv-rec3/
+slides/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
