--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Docuentos incompletos o soluciones de talleres
 rubrica-taller-1.xlsx
 rubrica-taller-2.xlsx
-2_taller1.ipynb
+# 2_taller1.ipynb
 2_taller1_solved.ipynb
 2_taller2.ipynb
 2_taller2_solved.ipynb
